# market_dashboard

./: .gitignore  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
pipeline/: __init__.py  custom_universe.py  email_render.py  market_hours.py  orchestrator.py  serve.py  ship.py
pipeline/contracts/: __init__.py  models.py  universe.py
pipeline/evals/: harness.py  test_fuse_attribution.py  test_handoff_gate.py  test_no_lookahead.py
pipeline/evals/gold/: diagnostics.json  fintech.json
pipeline/fixtures/diagnostics/: classifications.json  quotes.json  raw_items.json
pipeline/fixtures/fintech/: classifications.json  quotes.json  raw_items.json
pipeline/providers/: __init__.py  alphavantage_quotes.py  anthropic_classifier.py  base.py  edgar.py  exa_news.py  fallback.py  finnhub_quotes.py  fixture.py  fmp_quotes.py  history.py  real_stubs.py  registry.py  rss.py  rules.py  stooq_quotes.py  util.py  venice_classifier.py  venice_first_read.py  yahoo_quotes.py
pipeline/stages/: fuse.py  output.py  process.py  source.py
pipeline/tests/: test_aggregator_filter.py  test_custom_universe.py  test_data_provenance.py  test_dedupe.py  test_egress.py  test_first_read.py  test_history.py  test_language_filter.py  test_pipeline_smoke.py  test_provider_conformance.py  test_real_providers.py  test_serve.py  test_source_health.py  test_venice_classifier.py
universes/: diagnostics.yaml  fintech.yaml
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: brief.json  universes.json
web/public/briefs/: fintech.json
web/src/: App.tsx  index.css
web/src/components/: ByCompany.tsx  DataModeBanner.tsx  EmailModal.tsx  FirstRead.tsx  Header.tsx  MarketStrip.tsx  MoveBars.tsx  NewUniverseModal.tsx  PriceChart.tsx  PrioritySignals.tsx  RightRail.tsx  SectorHeadlines.tsx  TheRead.tsx  VisualizeModal.tsx  WatchlistModal.tsx  bits.tsx
web/src/lib/: colors.ts  contracts.ts  format.ts  loadBrief.ts  watchlists.ts
