[project]
name = "market-dashboard-pipeline"
version = "0.1.0"
description = "Morning competitive-intelligence + market-analytics pipeline (deterministic orchestrator, fixture-first providers)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "httpx>=0.27",      # real providers (EDGAR, RSS, Exa news)
    "feedparser>=6.0",  # real RSS provider
]

[project.optional-dependencies]
# The Anthropic SDK is only needed when BRIEF_CLASSIFIER=anthropic (real Claude
# process stage). The pipeline runs end-to-end on fixtures without it.
anthropic = ["anthropic>=0.69"]
dev = ["pytest>=8.0", "anthropic>=0.69"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
pipeline = ["fixtures/**/*.json", "evals/gold/*.json"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests", "pipeline/evals"]
addopts = "-q"
