[project]
name = "market-dashboard-pipeline"
version = "0.1.0"
description = "Morning competitive-intelligence + market-analytics pipeline (deterministic orchestrator, fixture-first providers)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "httpx>=0.27",      # real providers (EDGAR, RSS, Exa news)
    "feedparser>=6.0",  # real RSS provider
    "anthropic>=0.69",  # real classifier (only used when ANTHROPIC_API_KEY is set)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Render's default build for a manually-created Python service is
# `poetry install`; Poetry ignores [tool.setuptools] and needs its own
# package pointer or it fails with "No file/folder found for package".
[tool.poetry]
packages = [{ include = "pipeline" }]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
pipeline = ["fixtures/**/*.json", "evals/gold/*.json"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests", "pipeline/evals"]
addopts = "-q"
